--- a/coursera/statistics_with_r/intro_prob_data.nb.html
+++ b/coursera/statistics_with_r/intro_prob_data.nb.html
@@ -10,6 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Tamal Mukherjee" />
 
 
 <title>Introduction to Probability and Data</title>
@@ -1745,6 +1746,7 @@ summary {
 
 
 <h1 class="title toc-ignore">Introduction to Probability and Data</h1>
+<h4 class="author">Tamal Mukherjee</h4>
 
 </div>
 
@@ -1752,7 +1754,7 @@ summary {
 <!-- rnb-text-begin -->
 <!-- rnb-text-end -->
 
-<div id="rmd-source-code">LS0tDQp0aXRsZTogIkludHJvZHVjdGlvbiB0byBQcm9iYWJpbGl0eSBhbmQgRGF0YSINCkF1dGhvcjogIlRhbWFsIE11a2hlcmplZSINCm91dHB1dDogaHRtbF9ub3RlYm9vaw0KLS0tDQoNCg==</div>
+<div id="rmd-source-code">LS0tDQp0aXRsZTogIkludHJvZHVjdGlvbiB0byBQcm9iYWJpbGl0eSBhbmQgRGF0YSINCmF1dGhvcjogIlRhbWFsIE11a2hlcmplZSINCm91dHB1dDogaHRtbF9ub3RlYm9vaw0KLS0tDQoNCg==</div>
 
 
 
