--- a/coursera/statistics_with_r/intro_prob_data.nb.html
+++ b/coursera/statistics_with_r/intro_prob_data.nb.html
@@ -1752,9 +1752,10 @@ summary {
 
 
 <!-- rnb-text-begin -->
+<p>to view <a href="http://htmlpreview.github.io" class="uri">http://htmlpreview.github.io</a></p>
 <!-- rnb-text-end -->
 
-<div id="rmd-source-code">LS0tDQp0aXRsZTogIkludHJvZHVjdGlvbiB0byBQcm9iYWJpbGl0eSBhbmQgRGF0YSINCmF1dGhvcjogIlRhbWFsIE11a2hlcmplZSINCm91dHB1dDogaHRtbF9ub3RlYm9vaw0KLS0tDQoNCg==</div>
+<div id="rmd-source-code">LS0tDQp0aXRsZTogIkludHJvZHVjdGlvbiB0byBQcm9iYWJpbGl0eSBhbmQgRGF0YSINCmF1dGhvcjogIlRhbWFsIE11a2hlcmplZSINCm91dHB1dDogaHRtbF9ub3RlYm9vaw0KLS0tDQp0byB2aWV3IGh0dHA6Ly9odG1scHJldmlldy5naXRodWIuaW8NCg0K</div>
 
 
 
